updating the login file

--- a/public/login.html
+++ b/public/login.html
@@ -120,7 +120,7 @@
                 const user = userCredential.user;
                 console.log('Login successful:', user);
                 alert('Login successful');
-                window.location.href = '../index.html'; // Redirect to the main app
+                window.location.href = '/'; // Redirect to the main app
             } catch (error) {
                 console.error('Error during login:', error);
                 alert(`Error: ${error.message}`);
